--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.8",
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.758.0",
     "api-query-params": "^5.4.0",
     "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
@@ -35,6 +37,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.10.1",
     "mongoose-delete": "^1.0.2",
-    "reflect-metadata": "^0.2.2"
+    "multer": "^1.4.5-lts.1",
+    "reflect-metadata": "^0.2.2",
+    "uuid": "^11.1.0"
   }
 }
