--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts"
+    "ignore": [
+      "node_modules",
+      "dist"
+    ],
+    "start": "nodemon --exec ts-node index.ts"
   },
   "repository": {
     "type": "git",
