--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ignore": [
-      "node_modules",
-      "dist"
-    ],
-    "start": "nodemon --exec ts-node index.ts"
+    "start": "nodemon --exec ts-node ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -35,6 +31,7 @@
     "api-query-params": "^5.4.0",
     "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3",
