--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.8",
     "nodemon": "^3.1.9"
@@ -34,7 +35,9 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http-status": "^2.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.10.1",
     "mongoose-delete": "^1.0.2",
