--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "http-status": "^2.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "lodash": "^4.17.21",
     "mongoose": "^8.10.1",
     "mongoose-delete": "^1.0.2",
