--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node ./src/index.ts"
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -44,6 +45,7 @@
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "lodash": "^4.17.21",
+    "mime": "^4.0.7",
     "mongoose": "^8.10.1",
     "mongoose-delete": "^1.0.2",
     "multer": "^1.4.5-lts.1",
